feat: 实现 RBAC 权限模型和 OAuth2 认证
- 添加 UserService 通过用户获取角色和权限的方法
- 实现 RoleServiceImpl.listByUserId 通过用户获取角色
- 实现 PermissionServiceImpl.listByRoleId 通过角色获取权限
- 更新 SysUserDetailsService 加载数据库角色和权限到 JWT
- 添加 UserController RBAC 相关接口
- 集成 OAuth2 认证服务器配置
- 添加 JWT Token 生成和验证