@@ -5,8 +5,11 @@ import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.linsir.system.modules.rbac.entity.Permission;
 import com.linsir.system.modules.rbac.mapper.PermissionMapper;
 import com.linsir.system.modules.rbac.service.PermissionService;
+import com.linsir.system.modules.rbac.service.RolePermissionService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -16,7 +19,10 @@ import java.util.List;
  * @version 1.0.0
  */
 @Service
+@RequiredArgsConstructor
 public class PermissionServiceImpl extends ServiceImpl<PermissionMapper, Permission> implements PermissionService {
+
+    private final RolePermissionService rolePermissionService;
 
     @Override
     public Permission getByPermissionCode(String permissionCode) {
@@ -35,7 +41,15 @@ public class PermissionServiceImpl extends ServiceImpl<PermissionMapper, Permiss
 
     @Override
     public List<Permission> listByRoleId(Long roleId) {
-        // 通过关联表查询，这里先返回空列表，后续实现
-        return List.of();
+        // 1. 获取角色的权限ID列表
+        List<Long> permissionIds = rolePermissionService.listPermissionIdsByRoleId(roleId);
+        if (permissionIds == null || permissionIds.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        // 2. 根据权限ID查询权限信息
+        LambdaQueryWrapper<Permission> wrapper = new LambdaQueryWrapper<>();
+        wrapper.in(Permission::getId, permissionIds);
+        return list(wrapper);
     }
 }
